Handle 404 in gh-pages

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "web": "expo start --web",
     "lint": "expo lint",
     "deploy": "gh-pages --nojekyll -d dist -t",
-    "predeploy": "expo export -p web && shx touch dist/.gitignore"
+    "predeploy": "expo export -p web && shx touch dist/.gitignore && shx cp dist/index.html dist/404.html"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
